[package]
name = "aery"
version = "0.6.0"
edition = "2021"
authors = ["iiYese iiyese@outlook.com"]
repository = "https://github.com/ka-de/aery"
description = "Non-fragmenting ZST relations for Bevy."
keywords = ["bevy", "relations", "game", "ecs"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.13.2"
bevy_derive = "0.13.2"
bevy_ecs = "0.13.2"
bevy_hierarchy = "0.13.2"
bevy_log = "0.13.2"
bevy_utils = "0.13.2"
smallvec = "1.11.0"
aery_macros = { path = "macros", version = "0.3.0-dev" }
aquamarine = "0.3.2"

[dev-dependencies]
bevy = "0.13.2"
bevy_vector_shapes = "0.7"

[features]
default = ["aery"]
aery = []
